[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fishing-Column.png" type="Texture" id=1]
[ext_resource path="res://Assets/Progress-Empty.png" type="Texture" id=2]
[ext_resource path="res://Assets/Progress-Bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hook.png" type="Texture" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Nunito/Nunito-SemiBold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Plus.png" type="Texture" id=8]
[ext_resource path="res://Assets/minus.png" type="Texture" id=9]
[ext_resource path="res://Assets/font.tres" type="DynamicFont" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.79924, 18.9973 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Progress" type="TextureProgress" parent="."]
margin_left = 176.0
margin_top = 16.0
margin_right = 186.0
margin_bottom = 301.0
max_value = 1000.0
page = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishingColumn" type="Sprite" parent="."]
position = Vector2( 161.331, 158.597 )
texture = ExtResource( 1 )

[node name="Hook" type="Node2D" parent="."]
position = Vector2( 161.436, 279.102 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Hook"]
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Hook"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook/Area2D"]
shape = SubResource( 1 )

[node name="Clicker" type="TextureButton" parent="."]
margin_left = -3.54941
margin_right = 638.451
margin_bottom = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 225.807
margin_top = 55.9204
margin_right = 306.807
margin_bottom = 246.92
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" parent="GridContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 81.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
type = "Easy"

[node name="Button2" parent="GridContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 81.0
margin_bottom = 74.0
focus_mode = 0
enabled_focus_mode = 0
type = "Medium"

[node name="Button3" parent="GridContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 81.0
margin_bottom = 113.0
focus_mode = 0
enabled_focus_mode = 0
type = "Hard"

[node name="Button4" parent="GridContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 117.0
margin_right = 81.0
margin_bottom = 152.0
focus_mode = 0
enabled_focus_mode = 0
type = "Impossible"

[node name="Button5" parent="GridContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 156.0
margin_right = 81.0
margin_bottom = 191.0
focus_mode = 0
enabled_focus_mode = 0
type = "Seriously"

[node name="Message" type="Label" parent="."]
margin_left = 11.2327
margin_top = 111.92
margin_right = 140.233
margin_bottom = 160.92
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 218.97
margin_top = 16.097
margin_right = 313.97
margin_bottom = 50.097
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spawn Fish"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 225.807
margin_top = 265.148
margin_right = 566.807
margin_bottom = 299.148
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click or tap anywhere else to raise the hook"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 363.462
margin_top = 16.097
margin_right = 475.462
margin_bottom = 50.097
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hook Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Node2D" parent="."]
position = Vector2( 412.933, 55.9204 )

[node name="IncreaseSpeed" type="TextureButton" parent="Settings"]
margin_left = 18.0094
margin_top = 0.823402
margin_right = 35.0094
margin_bottom = 17.8234
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseSpeed" type="TextureButton" parent="Settings"]
margin_left = -35.9625
margin_top = 0.823402
margin_right = -18.9625
margin_bottom = 17.8234
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseAcceleration" type="TextureButton" parent="Settings"]
margin_left = 18.0094
margin_top = 39.0
margin_right = 35.0094
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseAcceleration" type="TextureButton" parent="Settings"]
margin_left = -35.9625
margin_top = 39.0
margin_right = -18.9625
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseDeceleration" type="TextureButton" parent="Settings"]
margin_left = 18.0094
margin_top = 78.0
margin_right = 35.0094
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseDeceleration" type="TextureButton" parent="Settings"]
margin_left = -35.9625
margin_top = 78.0
margin_right = -18.9625
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseBounce" type="TextureButton" parent="Settings"]
margin_left = 18.0094
margin_top = 117.0
margin_right = 35.0094
margin_bottom = 134.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseBounce" type="TextureButton" parent="Settings"]
margin_left = -35.9625
margin_top = 117.0
margin_right = -18.9625
margin_bottom = 134.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="Settings"]
margin_left = 58.9712
margin_right = 99.9712
margin_bottom = 20.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccelerationLabel" type="Label" parent="Settings"]
margin_left = 58.9712
margin_top = 37.6284
margin_right = 139.971
margin_bottom = 57.6284
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Acceleration"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecelerationLabel" type="Label" parent="Settings"]
margin_left = 58.9712
margin_top = 75.8486
margin_right = 186.971
margin_bottom = 95.8486
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Falling Acceleration"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BounceLabel" type="Label" parent="Settings"]
margin_left = 59.0
margin_top = 115.0
margin_right = 108.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bounce"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedValue" type="Label" parent="Settings"]
margin_left = -14.0
margin_right = 12.0
margin_bottom = 20.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccelerationValue" type="Label" parent="Settings"]
margin_left = -14.0
margin_top = 37.6284
margin_right = 12.0
margin_bottom = 57.6284
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecelerationValue" type="Label" parent="Settings"]
margin_left = -14.0
margin_top = 75.8486
margin_right = 12.0
margin_bottom = 95.8486
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BounceValue" type="Label" parent="Settings"]
margin_left = -14.0
margin_top = 115.0
margin_right = 12.0
margin_bottom = 135.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Settings" instance=ExtResource( 6 )]
margin_left = -40.435
margin_top = 156.0
margin_right = 40.565
margin_bottom = 191.0
type = "Reset"

[node name="MessageTimer" type="Timer" parent="."]
[connection signal="button_down" from="Clicker" to="." method="_on_Clicker_button_down"]
[connection signal="pressed" from="Clicker" to="." method="_on_Clicker_pressed"]
[connection signal="pressed" from="GridContainer/Button" to="." method="spawn_easy"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="spawn_medium"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="spawn_hard"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="spawn_impossible"]
[connection signal="pressed" from="GridContainer/Button5" to="." method="spawn_seriously"]
[connection signal="pressed" from="Settings/IncreaseSpeed" to="." method="_on_IncreaseSpeed_pressed"]
[connection signal="pressed" from="Settings/DecreaseSpeed" to="." method="_on_DecreaseSpeed_pressed"]
[connection signal="pressed" from="Settings/IncreaseAcceleration" to="." method="_on_IncreaseAcceleration_pressed"]
[connection signal="pressed" from="Settings/DecreaseAcceleration" to="." method="_on_DecreaseAcceleration_pressed"]
[connection signal="pressed" from="Settings/IncreaseDeceleration" to="." method="_on_IncreaseDeceleration_pressed"]
[connection signal="pressed" from="Settings/DecreaseDeceleration" to="." method="_on_DecreaseDeceleration_pressed"]
[connection signal="pressed" from="Settings/IncreaseBounce" to="." method="_on_IncreaseBounce_pressed"]
[connection signal="pressed" from="Settings/DecreaseBounce" to="." method="_on_DecreaseBounce_pressed"]
[connection signal="pressed" from="Settings/Button" to="." method="reset_settings"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
